Break dependency on Spring Boot
- Removes the use of spring-boot-dependencies to drive the
  Java platform (spring-pulsar-dependencies). This is needed
  to avoid chicken-egg problem when Spring Boot in turn has
  a dependency on Spring Pulsar.

- Move integration tests into own sub-module

- The only place that still relies on Spring Boot is in the
  integration tests and the samples.

- Update to Spring Boot 3.1.1-SNAPSHOT